remove file and change the login style

--- a/login.html
+++ b/login.html
@@ -16,7 +16,9 @@
     <div id="rower" class="row">
       <div id="main" class="col-xl-7 m-auto">
         <form action="./login.html" method="post">
-	  <img src="./timg.png" m-auto/>
+	 <div  style="text-align: center">
+            <img src="./timg.png" m-auto/>
+          </div>
           <div class="form-check form-check-inline  " >
             <input class="form-check-input"  type="radio" name="isAdmin" id="user" value="0" checked >
             <label class="form-check-label"  for="user">歌曲</label>
