--- a/bindex.html
+++ b/bindex.html
@@ -15,6 +15,12 @@
 		<script type="text/javascript" src="./js/selector.js"></script>
 		
 		<title>Music</title>
+<style>
+                        .beyondfooter{ width: 100%;height: 30px; background-color: white; }
+                        .progress_bg{height: 30px;width:100%; border: 1px solid #ddd; border-radius: 0;overflow: hidden;background-color:#f2f2f2;}/**/
+                        .progress_bar{ position: absolute; width: 0; height: 30px; border-radius: 0;background: #5FB878; }/* position: absolute;*/
+                </style>
+
 	</head>
 	<body oncontextmenu="return false;" onselectstart="return false" >
 		<!--[if lte IE 8]>
@@ -602,6 +608,11 @@
 				</div>
 			
 			</div>
+                        <div class="beyondfooter" id="mydiv">
+                                        <p class="progress_bar" id="mybar"> </p>
+                                        <p class="progress_bg" id="mybg"> </p>
+                        </div>
+
 			<div class="footer">
 				<div class="main">
 					
