--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 		<script type="text/javascript" src="./js/selector.js"></script>
 		
 		<title>Music</title>
+		<style>
+			.beyondfooter{ width: 100%;height: 5%; background-color: white; }
+			.progress_bg{height: 100%;width:100%; border: 1px solid #ddd; border-radius: 0;overflow: hidden;background-color:#f2f2f2;}/**/
+			.progress_bar{ position: absolute; width: 0; height: 5%; border-radius: 0;background: #5FB878; }/* position: absolute;*/
+		</style>
 	</head>
 	<body oncontextmenu="return false;" onselectstart="return false" >
 <header>
@@ -354,6 +359,44 @@
 [03:22.05]Midnight daydream,像一段午夜的遐想
 [03:56.10]Midnight daydream,像一段午夜的遐想
 </textarea>
+<textarea name="" id="ocean eyes" cols="30" rows="10" style="display: none;">
+﻿[00:16.37]I’ve been watching you我注视着你
+[00:19.44]For some time已经有一段时间
+[00:22.60]Can’t stop staring at总是不自觉凝视
+[00:26.18]Those ocean eyes便陷入了你海洋般的双眸
+[00:29.38]Burning cities and燃烧的城市
+[00:32.81]Napalm skies和焦油充斥的天空
+[00:36.11]Fifteen flares inside those ocean eyes无边的光芒隐匿在你海洋般的眸中
+[00:42.40]Your ocean eyes你海洋般的双眸
+[00:45.41]No fair不公平呢
+[00:52.00]You really know how to make me cry你太清楚怎样才能让我伤心落泪
+[00:54.92]When you give me those ocean eyes当你用那海一般的双眸与我对视
+[00:58.52]I'm scared我真害怕
+[01:05.49]I've never fallen from quite this high我从未沉沦得如此之深
+[01:08.38]Falling into your ocean eyes深陷于你那海洋般的双眸
+[01:13.26]Those ocean eyes你那海洋般的双眸
+[01:16.10]I've been walking through我已经独自穿过整个世界
+[01:19.15]A world gone blind双眼已经盲目
+[01:22.56]Can't stop thinking of your diamond mind无法停止回想你钻石一般的心
+[01:29.12]Careful creature小心翼翼的人啊
+[01:32.31]Made friends with time和残忍的时间为伍
+[01:35.67]He left her lonely with a diamond mind他留下孤独的她 只剩一颗钻石般的心
+[01:42.40]And those ocean eyes还有那海洋般的双眸
+[01:44.60]No fair不公平呢
+[01:51.56]You really know how to make me cry你太清楚怎样才能让我伤心落泪
+[01:54.38]When you gimme those ocean eyes当你用那海一般的双眸与我对视
+[01:57.91]I'm scared我真害怕
+[02:04.46]I've never fallen from quite this high我从未沉沦得如此之深
+[02:07.71]Falling into your ocean eyes深陷于你那海洋般的双眸
+[02:11.79]Those ocean eyes那海洋般的双眸
+[02:44.45]No fair不公平呢
+[02:51.44]You really know how to make me cry你太清楚怎样才能让我伤心落泪
+[02:53.94]When you gimme those ocean eyes当你用那海一般的双眸与我对视
+[02:57.67]I'm scared我真害怕
+[03:04.72]I've never fallen from quite this high我从未沉沦得如此之深
+[03:07.28]Falling into your ocean eyes深陷于你那海洋般的双眸
+[03:11.63]Those your ocean eyes你那海洋般的双眸<!--<div class="page Opage" > -->
+</textarea>
 <textarea name="" id="Pray" cols="30" rows="10" style="display: none;">
 [00:00.052] Pray
 [00:05.322] Pray
@@ -412,6 +455,44 @@
 <textarea name="" id="Travel to the West" cols="30" rows="10" style="display: none;">
 
 [00:00.00]暂无歌词
+</textarea>
+<textarea name="" id="情非得已" cols="30" rows="10" style="display: none;">
+[00:00.000] 作词 : 湯小康
+[00:01.000] 作曲 : 張國祥
+[00:02.07]制作人：Trouze/Sam Feldt
+[00:03.74]
+[00:08.24]难以忘记初次见你
+[00:11.97]一双迷人的眼睛
+[00:15.91]在我脑海里你的身影
+[00:20.31]挥散不去
+[00:23.69]握你的双手感觉你的温柔
+[00:27.63]真的有点透不过气
+[00:31.88]你的天真 我想珍惜
+[00:35.63]看到你受委屈我会伤心 哦
+[00:41.33]只怕我自己会爱上你
+[00:45.35]不敢让自己靠的太近
+[00:49.31]怕我没什么能够给你
+[00:53.18]爱你也需要很大的勇气
+[00:56.89]只怕我自己会爱上你
+[01:01.06]也许有天会情不自禁
+[01:04.90]想念只让自己苦了自己
+[01:08.94]爱上你是我情非得已
+[01:28.96]难以忘记初次见你
+[01:32.64]一双迷人的眼睛
+[01:36.65]在我脑海里你的身影
+[01:40.95]挥散不去
+[01:44.30]握你的双手感觉你的温柔
+[01:48.38]真的有点透不过气
+[01:52.58]你的天真 我想珍惜
+[01:56.30]看到你受委屈我会伤心 哦
+[02:02.01]只怕我自己会爱上你
+[02:06.09]不敢让自己靠的太近
+[02:09.99]怕我没什么能够给你
+[02:13.91]爱你也需要很大的勇气
+[02:17.67]只怕我自己会爱上你
+[02:21.85]也许有天会情不自禁
+[02:25.74]想念只让自己苦了自己
+[02:29.77]爱上你是我情非得已
 </textarea>
 <textarea name="" id="过招" cols="30" rows="10" style="display: none;">
 [ti:过招]
@@ -609,7 +690,6 @@
 [04:29.24]在我成熟的笑脸
 [04:32.88]你却未看过一眼
 </textarea>
-		<div class="page Opage" >
 			<div class="main">
 				
 				<div class="Rbox r">
@@ -618,6 +698,10 @@
 					<div class="Lyric"></div>
 				</div>
 			
+			</div>
+			<div class="beyondfooter" id="mydiv">
+					<p class="progress_bar" id="mybar"> </p>
+					<p class="progress_bg" id="mybg"> </p> 
 			</div>
 			<div class="footer">
 				<div class="main">
@@ -643,7 +727,7 @@
 					
 				</div>
 			</div>
-		</div>
+<!--		</div>-->
 		<audio id="myMusic" src="./music/mp3/1tro_kygo.mp3">
 			您的浏览器不支持 audio 元素。
 		</audio>
